# sql-transpiler

./: README.md  sql-transpiler.code-workspace
.cspell/: custom-words.txt
backend/: README.md  lambda_function.py  pyproject.toml  requests.http  requirements.txt
backend/.cspell/: custom-words.txt
frontend/: README.md  cspell.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.cspell/: custom-words.txt
frontend/src/: App.tsx  main.tsx
frontend/src/components/: DialectListbox.tsx  Footer.tsx  Header.tsx  Pane.tsx  ReadSqlArea.tsx  WriteSqlArea.tsx
frontend/src/constants/: dialects.ts
frontend/src/hooks/: useSqlTranspiler.ts
