[project]
name = "sql-transpiler-backend"
version = "0.1.0"
description = "API server of SQL Transpiler"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "mangum>=0.19.0",
    "pydantic-settings>=2.10.1",
    "sqlglot>=27.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
